Added and removed comments

--- a/src/main/resources/login.properties
+++ b/src/main/resources/login.properties
@@ -1,4 +1,5 @@
 # Name of csv file to be read from src/main/resources/
+# Empty lines in csv file can count as invalid entries
 csvfilename=employees
 
 # MySQL database details
